--- a/gateway/src/main/resources/static/index.html
+++ b/gateway/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=1150, user-scalable=no">
-    <title>Piggy Metrics</title>
+    <title>Eli's Piggy Metrics</title>
     <link rel="stylesheet" type="text/css" href="css/launch.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/animation.css">
@@ -430,7 +430,7 @@
                 <div class="BACKCARD">
                     <div id="infopage">
                         <span class="frominfo" id="infosubtitle">Piggy Metrics is the new simple way to deal with personal finances</span>
-                        <span class="frominfo" id="infotitle">This is how it works</span>
+                        <span class="frominfo" id="infotitle">This is how it works[ELI]</span>
                         <div class="infoflipback frominfo"></div>
                         <div id="infoleft" class="infocolumn frominfo">
                             <div id="leftcolumn">enter planned periodic<br>incomes and expenses<br>
